[package]
name = "leef2hashmap"
description = "A Simple LEEF Parser to a HashMap"
version = "0.1.4"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["leef", "json", "event"]
categories = ["parsing"]
exclude = ["examples"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/marirs/leef2hashmap-rs"
repository = "https://github.com/marirs/leef2hashmap-rs"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
